--- a/app/src/main/res/layout/fragment_team_page.xml
+++ b/app/src/main/res/layout/fragment_team_page.xml
@@ -2,6 +2,11 @@
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+        <variable
+            name="orbmatch"
+            type="edmanfeng.paddamagecalculator.GameModel.OrbMatch"/>
+    </data>
 
     <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                  android:layout_height="match_parent"
@@ -9,13 +14,13 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/team_recycler_view"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="8dp"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            />
+            android:layout_marginStart="8dp"/>
 
 
         <TextView
@@ -27,7 +32,8 @@
             android:text="@string/choose_orb_type_label"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/team_recycler_view"
-            tools:text="Orb type"/>
+            tools:text="Orb type"
+            android:layout_marginStart="8dp"/>
 
         <android.support.v7.widget.AppCompatSpinner
             android:id="@+id/combo_type_spinner"
@@ -40,7 +46,8 @@
             app:layout_constraintLeft_toRightOf="@+id/combo_type_label"
             android:layout_marginLeft="27dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/team_recycler_view"/>
+            app:layout_constraintTop_toBottomOf="@+id/team_recycler_view"
+            android:layout_marginStart="27dp"/>
 
 
         <TextView
@@ -53,10 +60,11 @@
             tools:layout_conversion_absoluteY="181dp"
             tools:layout_conversion_absoluteWidth="40dp"
             tools:layout_conversion_absoluteHeight="16dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintLeft_toRightOf="@+id/combo_enhance_number_spinner"
             android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="15dp"
-            app:layout_constraintTop_toBottomOf="@+id/combo_type_label"/>
+            android:layout_marginTop="25dp"
+            app:layout_constraintTop_toBottomOf="@+id/combo_shape_label"/>
 
         <android.support.v7.widget.AppCompatSpinner
             android:id="@+id/combo_orb_number_spinner"
@@ -68,8 +76,9 @@
             tools:layout_conversion_absoluteHeight="24dp"
             app:layout_constraintLeft_toRightOf="@+id/combo_orb_number_label"
             android:layout_marginLeft="40dp"
+            android:layout_marginStart="40dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/combo_type_spinner"/>
+            app:layout_constraintTop_toBottomOf="@+id/combo_shape_spinner"/>
 
 
         <TextView
@@ -84,8 +93,9 @@
             tools:layout_conversion_absoluteHeight="16dp"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="17dp"
-            app:layout_constraintTop_toBottomOf="@+id/combo_orb_number_label"/>
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="25dp"
+            app:layout_constraintTop_toBottomOf="@+id/combo_type_label"/>
 
         <android.support.v7.widget.AppCompatSpinner
             android:id="@+id/combo_enhance_number_spinner"
@@ -97,8 +107,9 @@
             tools:layout_conversion_absoluteHeight="24dp"
             app:layout_constraintLeft_toRightOf="@+id/combo_enhance_number_label"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/combo_orb_number_spinner"/>
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="18dp"
+            app:layout_constraintTop_toBottomOf="@+id/combo_type_spinner"/>
 
 
         <TextView
@@ -111,10 +122,11 @@
             tools:layout_conversion_absoluteY="181dp"
             tools:layout_conversion_absoluteWidth="39dp"
             tools:layout_conversion_absoluteHeight="16dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintLeft_toRightOf="@+id/combo_type_spinner"
             android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="14dp"
-            app:layout_constraintTop_toBottomOf="@+id/combo_enhance_number_label"/>
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/team_recycler_view"/>
 
         <android.support.v7.widget.AppCompatSpinner
             android:id="@+id/combo_shape_spinner"
@@ -124,11 +136,32 @@
             tools:layout_conversion_absoluteY="197dp"
             tools:layout_conversion_absoluteWidth="48dp"
             tools:layout_conversion_absoluteHeight="24dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/combo_enhance_number_spinner"
             app:layout_constraintLeft_toRightOf="@+id/combo_shape_label"
-            android:layout_marginLeft="42dp"/>
+            android:layout_marginLeft="42dp"
+            android:layout_marginStart="42dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/team_recycler_view"/>
 
+        <Button
+            android:id="@+id/add_combo_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/add_combo_button_text"
+            tools:text="Add"
+            app:layout_constraintLeft_toRightOf="@+id/combo_shape_spinner"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/team_recycler_view"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/combo_recyclerview"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/combo_enhance_number_spinner"/>
 
     </android.support.constraint.ConstraintLayout>
 </layout>
