--- a/app/src/main/res/layout/fragment_team_page.xml
+++ b/app/src/main/res/layout/fragment_team_page.xml
@@ -79,7 +79,8 @@
             app:layout_constraintLeft_toRightOf="@+id/combo_orb_number_label"
             android:layout_marginLeft="40dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/combo_shape_spinner"/>
+            app:layout_constraintTop_toBottomOf="@+id/combo_shape_spinner"
+            app:selectedValue="@={orbmatch.count}"/>
 
 
         <TextView
@@ -110,7 +111,8 @@
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/combo_type_spinner"/>
+            app:layout_constraintTop_toBottomOf="@+id/combo_type_spinner"
+            app:selectedValue="@={orbmatch.enhanced}"/>
 
 
         <TextView
@@ -141,7 +143,8 @@
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/combo_enhance_number_spinner"
             app:layout_constraintLeft_toRightOf="@+id/combo_shape_label"
-            android:layout_marginLeft="42dp"/>
+            android:layout_marginLeft="42dp"
+            app:selectedValue="@={orbmatch.shape}"/>
 
         <Button
             android:id="@+id/add_combo_button"
