--- a/app/src/main/res/layout/fragment_team_page.xml
+++ b/app/src/main/res/layout/fragment_team_page.xml
@@ -62,25 +62,25 @@
             tools:layout_conversion_absoluteWidth="40dp"
             tools:layout_conversion_absoluteHeight="16dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/combo_shape_label"
             android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"/>
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="15dp"
+            app:layout_constraintTop_toBottomOf="@+id/combo_type_label"/>
 
         <android.support.v7.widget.AppCompatSpinner
             android:id="@+id/combo_orb_number_spinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:layout_conversion_absoluteX="104dp"
-            tools:layout_conversion_absoluteY="197dp"
-            tools:layout_conversion_absoluteWidth="48dp"
-            tools:layout_conversion_absoluteHeight="24dp"
-            android:layout_marginStart="40dp"
-            app:layout_constraintLeft_toRightOf="@+id/combo_orb_number_label"
-            android:layout_marginLeft="40dp"
+            android:layout_marginLeft="38dp"
+            android:layout_marginStart="38dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/combo_shape_spinner"
-            app:selectedValue="@={orbmatch.count}"/>
+            app:layout_constraintLeft_toRightOf="@+id/combo_orb_number_label"
+            app:layout_constraintTop_toBottomOf="@+id/combo_type_spinner"
+            app:selectedValue="@={orbmatch.count}"
+            tools:layout_conversion_absoluteHeight="24dp"
+            tools:layout_conversion_absoluteWidth="48dp"
+            tools:layout_conversion_absoluteX="104dp"
+            tools:layout_conversion_absoluteY="197dp"/>
 
 
         <TextView
@@ -93,11 +93,11 @@
             tools:layout_conversion_absoluteY="181dp"
             tools:layout_conversion_absoluteWidth="73dp"
             tools:layout_conversion_absoluteHeight="16dp"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="15dp"
-            app:layout_constraintTop_toBottomOf="@+id/combo_type_label"/>
+            android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@+id/combo_shape_label"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"/>
 
         <android.support.v7.widget.AppCompatSpinner
             android:id="@+id/combo_enhance_number_spinner"
@@ -110,9 +110,9 @@
             app:layout_constraintLeft_toRightOf="@+id/combo_enhance_number_label"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
+            app:selectedValue="@={orbmatch.enhanced}"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/combo_type_spinner"
-            app:selectedValue="@={orbmatch.enhanced}"/>
+            app:layout_constraintTop_toBottomOf="@+id/combo_shape_spinner"/>
 
 
         <TextView
@@ -128,8 +128,8 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="15dp"
-            app:layout_constraintTop_toBottomOf="@+id/combo_enhance_number_label"/>
+            android:layout_marginTop="17dp"
+            app:layout_constraintTop_toBottomOf="@+id/combo_orb_number_label"/>
 
         <android.support.v7.widget.AppCompatSpinner
             android:id="@+id/combo_shape_spinner"
@@ -140,11 +140,11 @@
             tools:layout_conversion_absoluteWidth="48dp"
             tools:layout_conversion_absoluteHeight="24dp"
             android:layout_marginStart="42dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/combo_enhance_number_spinner"
+            app:selectedValue="@={orbmatch.shape}"
             app:layout_constraintLeft_toRightOf="@+id/combo_shape_label"
             android:layout_marginLeft="42dp"
-            app:selectedValue="@={orbmatch.shape}"/>
+            android:layout_marginTop="6dp"
+            app:layout_constraintTop_toBottomOf="@+id/combo_orb_number_spinner"/>
 
         <Button
             android:id="@+id/add_combo_button"
@@ -153,38 +153,29 @@
             android:text="@string/add_combo_button_text"
             tools:text="Add"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/team_recycler_view"
-            app:layout_constraintLeft_toRightOf="@+id/combo_type_spinner"
-            android:layout_marginLeft="8dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/combo_enhance_number_spinner"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/combo_recyclerview"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="59dp"
             android:layout_marginLeft="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/combo_orb_number_spinner"
-            android:layout_marginStart="16dp"/>
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/add_combo_button"/>
 
         <Button
             android:id="@+id/combo_calculate_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/calculate_combo_button_text"
-            app:layout_constraintLeft_toRightOf="@+id/combo_recyclerview"
-            android:layout_marginLeft="81dp"
-            android:layout_marginTop="110dp"
-            app:layout_constraintTop_toBottomOf="@+id/add_combo_button"
-            android:layout_marginStart="81dp"/>
-
-        <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="EXAMPLE"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/combo_calculate_button"
+            app:layout_constraintTop_toBottomOf="@+id/add_combo_button"
+            android:layout_marginStart="81dp"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"/>
 
