--- a/app/src/main/res/layout/fragment_team_page.xml
+++ b/app/src/main/res/layout/fragment_team_page.xml
@@ -6,6 +6,12 @@
         <variable
             name="orbmatch"
             type="edmanfeng.paddamagecalculator.GameModel.OrbMatch"/>
+        <variable
+            name="combolist"
+            type="java.util.List"/>
+        <variable
+            name="adapters"
+            type="edmanfeng.paddamagecalculator.BindingAdapters"/>
     </data>
 
     <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
@@ -176,7 +182,9 @@
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/add_combo_button"
             android:layout_marginStart="81dp"
+            android:layout_marginLeft="81dp"
             android:layout_marginRight="8dp"
+            android:layout_marginEnd="81dp"
             app:layout_constraintRight_toRightOf="parent"/>
 
     </android.support.constraint.ConstraintLayout>
