--- a/app/src/main/res/layout/fragment_team_page.xml
+++ b/app/src/main/res/layout/fragment_team_page.xml
@@ -166,26 +166,34 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/combo_recyclerview"
-            android:layout_width="match_parent"
-            android:layout_height="59dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
+            android:layout_width="368dp"
+            android:layout_height="0dp"
+            android:layout_margin="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/combo_calculate_button"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/add_combo_button"/>
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/add_combo_button"
+            app:layout_constraintVertical_bias="0.493"/>
 
         <Button
             android:id="@+id/combo_calculate_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/calculate_combo_button_text"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/add_combo_button"
-            android:layout_marginStart="81dp"
-            android:layout_marginLeft="81dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginEnd="81dp"
-            app:layout_constraintRight_toRightOf="parent"/>
+            android:text="@string/calculate_combo_button_text"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintHorizontal_bias="0.486"
+            android:layout_marginStart="8dp"/>
 
     </android.support.constraint.ConstraintLayout>
 </layout>
