--- a/app/src/main/res/layout/fragment_team_page.xml
+++ b/app/src/main/res/layout/fragment_team_page.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--TODO: figure out a way to enable/disable buttons with databinding-->
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:android="http://schemas.android.com/apk/res/android">
