--- a/app/src/main/res/layout/navigation_drawer.xml
+++ b/app/src/main/res/layout/navigation_drawer.xml
@@ -16,5 +16,11 @@
         android:layout_height="match_parent"
         android:layout_width="wrap_content"
         android:layout_gravity="start"
-        android:fitsSystemWindows="true"/>
+        android:fitsSystemWindows="true"
+        app:menu="@menu/navigation_drawer"/>
+        <!--
+        app:headerLayout=""
+        "
+        -->
+
 </android.support.v4.widget.DrawerLayout>
